--- a/hizmetler/saglik-merkezi.html
+++ b/hizmetler/saglik-merkezi.html
@@ -327,7 +327,7 @@
             </div>
             <div class="doctor-card">
                 <img src="../assets/img/doctorwoman.jpeg" alt="Dr. Ayşe Kaya">
-                <h3>Dr. Ayşe Kaya</h3>
+                <h3>Dr. Berra Özcan</h3>
                 <p>Diş Hekimi</p>
             </div>
             <div class="doctor-card">
